<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.example.mahbub.simplecalculator.MainActivity">

    <TextView
        android:id="@+id/text_view_display"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/custom_theme_color"
        android:gravity="right"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/custom_theme_color">

        <LinearLayout
            android:id="@+id/linear_layout_firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2">
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#f90202"
                    android:text="←"
                    android:layout_gravity="center"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#f90202"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white"
                    android:text="@string/seven"></Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:text="@string/eight"></Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nine"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">

                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/division"
                    android:textColor="#0191f9"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_multi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multi"
                    android:textColor="#0191f9"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textColor="#0191f9"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_fifthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dot"
                    android:textColor="#0191f9"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equal"
                    android:textColor="#0191f9"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:textColor="#0191f9"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@android:color/white">
                </Button>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
